# kuku

./: .devdbrc  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  main.py  pyproject.toml  run_app.sh  run_tests.ps1  run_tests.sh  run_tests_e2e.sh
.kilo/: kilo.jsonc
app/: config.py  database.py  main.py
app/models/: bank_accounts.py  categories.py  rules.py  transactions.py
app/routers/: backup.py  bank_accounts.py  bank_transactions.py  cash_in_hand.py  categories.py  dashboard.py  reports.py  rules.py
app/services/: backup.py  bank_accounts.py  cash_in_hand.py  categories.py  dashboard.py  reports.py  rules.py  transactions.py
app/services/exports/: __init__.py  base.py  transactions.py
app/static/css/: custom.css
app/templates/: dashboard.html
app/templates/layouts/: base.html
app/templates/pages/: backup.html  banks_categories.html  banks_manage.html  banks_rules.html  banks_transactions.html  cash_in_hand.html  coming_soon.html  dashboard.html
app/templates/partials/: backup_error.html  backup_preview.html  backup_result.html  bank_account_form.html  (+20 more)
app/utils/: nav.py  templates.py
sample/: .env.example  Dockerfile  docker-compose.yml  kuku-sample-backup.json
tests/: conftest.py  test_backup.py  test_banks_accounts.py  test_banks_manage.py  test_banks_transactions.py  test_categories.py  test_dashboard.py  test_reports.py  test_rules.py
tests/e2e/: conftest.py  test_bank_accounts.py  test_categories_e2e.py  test_dashboard.py  test_navigation.py  test_rules_e2e.py  test_smoke.py  test_transactions_e2e.py
(+10 files in other folders)
