[project]
name = "kuku"
version = "0.1.0"
description = "Kuku - Pure Python Desktop-Web Hybrid Business Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "fpdf2>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx2>=0.28.0",
    "pytest-playwright>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
